--- a/index.html
+++ b/index.html
@@ -122,14 +122,13 @@
         </div>
 
         <p class="copyright">
-          &copy; Copyright by
+          Project by 
           <a
             class="twitter-link"
             target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            href="www.linkedin.com/in/pratyaksh-singh-038662174"
+            > Pratyaksh Singh </a
+          >
         </p>
       </div>
 
