--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <a
             class="twitter-link"
             target="_blank"
-            href="www.linkedin.com/in/pratyaksh-singh-038662174"
+            href="#"
             > Pratyaksh Singh </a
           >
         </p>
